--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DCC202 - Aula 3</title>
 </head>
 <body>
-    
+    Olá, meu nome é Vitor. Minha matrícula é 202365146A.
+    Essa é minha primeira pagina html.
 </body>
 </html>
